Fix more UI hackery.